report icon misaligned issue resolved

--- a/app/styles/components/class/analytics/performance/teacher/_gru-metrics-sub-header.scss
+++ b/app/styles/components/class/analytics/performance/teacher/_gru-metrics-sub-header.scss
@@ -31,7 +31,7 @@
       padding-left: 75px;
     }
     .reportPadding {
-      padding-left: 10px;
+      padding-left: 79px;
     }
   }
 }
